--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
+    "sass": "^1.62.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
   }
