--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write .",
+    "prettier-staged": "pretty-quick --staged"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,11 +23,14 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
+    "prettier": "^2.8.7",
+    "pretty-quick": "^3.1.3",
     "sass": "^1.62.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
