--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "types": ["@types/node", "@types/react"],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
