chore: add `@/*` path alias to the tsconfig.json file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
     "noFallthroughCasesInSwitch": true,
 
     "types": ["@types/node", "@types/react"],
+
+    /* Importing */
+    "paths": {
+      "@/*": ["./src/*"]
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
