--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier-staged": "pretty-quick --staged"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
