--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         node: [ 18 ]
+    
+    environment:
+      name: ${{ github.ref_name == 'main' && 'production'  || github.ref_name}}
 
     steps:
       - name: 🥇 Checkout
