--- a/.github/workflows/fixer.yml
+++ b/.github/workflows/fixer.yml
@@ -16,11 +16,15 @@ jobs:
         os: [ ubuntu-latest ]
         node: [ 18 ]
 
+    environment:
+      name: ${{ github.ref_name == 'main' && 'production'  || github.ref_name}}
+
     steps:
       - name: 🥇 Checkout
         uses: actions/checkout@v3
         with:
           ref: ${{ secrets.BRANCH_NAME }}
+          token: ${{ secrets.PERSONAL_GB_TOKEN }}
 
       - name: ✅ Node.js
         uses: actions/setup-node@v3
