chore(.github/workflows): change commit message on fixer

--- a/.github/workflows/fixer.yml
+++ b/.github/workflows/fixer.yml
@@ -51,5 +51,5 @@ jobs:
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Style code
+          commit_message: 'chore: style code'
           commit_options: '--no-verify'
