--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prettier": "prettier --write .",
-    "prettier-staged": "pretty-quick --staged"
+    "prettier-staged": "pretty-quick --staged",
+    "test:unit": "TZ=UTC vitest run --passWithNoTests",
+    "test:ui": "TZ=UTC vitest --ui",
+    "test:unit:coverage": "TZ=UTC vitest run --coverage",
+    "test:unit:watch": "TZ=UTC vitest --passWithNoTests --watch"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
       "yarn lint --fix"
     ]
+  },
+  "engines": {
+    "node": ">=18.x"
   },
   "dependencies": {
     "axios": "^1.3.6",
@@ -29,9 +36,11 @@
     "@types/node": "^18.15.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/ui": "^0.30.1",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "devmoji": "^2.3.0",
@@ -40,6 +49,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "git-branch-is": "^4.0.0",
+    "happy-dom": "^9.9.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "postcss": "^8.4.23",
@@ -47,8 +57,10 @@
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.62.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.0"
+    "vite": "^4.3.0",
+    "vitest": "^0.30.1"
   }
 }
