chore: add new env var to `.env`

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_APP_API_URL="https://pokeapi.co/api/v2"
 VITE_PORT=3000
+VITE_SECRET="YOUR_VITE_SECRET"
+CERTBOT_DOMAIN="YOUR_DOMAIN"
+CERTBOT_EMAIL="YOUR_ADMIN_EMAIL"
