--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "flush-promises": "^1.0.2",
     "git-branch-is": "^4.0.0",
     "happy-dom": "^9.9.2",
     "husky": "^8.0.3",
