--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
