--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
-  pull_request:
-  paths:
+    paths:
     - 'src/**'
+  pull_request:
+    paths:
+      - 'src/**'
 
 jobs:
   ci:
